# GenAI2OpenAI

./: .gitignore  README.md  main.py  pyproject.toml
docs/: 模型列表.md
tools/: benchmark_models.py
utility/auto_login/: README.md  cas_login.py  login_cli.py
