[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "icecream>=2.1.8",
    "pydantic>=2.12.4",
    "pycryptodome>=3.20.0",
    "rich>=14.1.0",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]
